spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ header .introduction {
     height: 300px;
 
     position: absolute;
-    z-index: 20;
+    z-index: 200;
     top:0;
     bottom: 0;
     left: 0;
@@ -220,7 +220,7 @@ header .introduction p {
 .about_text {
   left: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 150;
   background: #042C45;
 }
 
